# pdf2ebook-python

./: .gitignore  README.md  pyproject.toml
pdf2ebook/: __init__.py  cli.py  compressor.py  utils.py
