[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2ebook"
version = "0.3.0"
authors = [
    {name = "Rafa", email = "rafa@example.com"}
]
description = "Convert PDFs to e-books with OCR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["pdf", "ebook", "ocr", "converter", "cli"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/pdf2ebook"
Issues = "https://github.com/yourusername/pdf2ebook/issues"

[project.scripts]
pdf2ebook = "pdf2ebook.cli:main"
