[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2ebook-python"
version = "0.3.0"
authors = [
    {name = "Rafa", email = "rafa@example.com"}
]
description = "Convert PDFs to e-books with OCR"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["pdf", "ebook", "ocr", "converter", "cli"]
dependencies = []

[project.urls]
Homepage = "https://github.com/RafaCMur/pdf2ebook-python"
Repository = "https://github.com/RafaCMur/pdf2ebook-python"
Issues = "https://github.com/RafaCMur/pdf2ebook-python/issues"

[project.scripts]
pdf2ebook = "pdf2ebook.cli:main"
